# Naka

./: .gitignore  LICENSE  main.py  orchestrator.py  pyproject.toml  registry.py
commands/: base_command.py  light_control.py  system_info.py
configs/: ai_config.toml  config_manager.py  infra_config.toml
engines/: ear_engine.py  voice_engine.py
utils/: logger.py
