[project]
name = "naka"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "kokoro-onnx>=0.5.0",
    "ollama>=0.6.1",
    "psutil>=7.2.2",
    "pyaudio>=0.2.14",
    "pydantic>=2.12.5",
    "sounddevice>=0.5.5",
    "soundfile>=0.13.1",
    "speechrecognition>=3.14.5",
]

[tool.uv.workspace]
members = [
    "test",
]
